Fix navbar on small screen

--- a/styles/additionnalStyle.css
+++ b/styles/additionnalStyle.css
@@ -122,3 +122,11 @@ body, h1, h2, h3, h4, h5, h6{
 .sidebartitle {
     padding-top: 20%;
 }
+
+@media (max-width: 1100px) {
+    .mobdb-hide-large{display:none!important}
+}
+
+@media (min-width: 1100px) {
+    .mobdb-show-large{display:none!important}
+}
